# terraform-policy-compiler

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/commands/: check-pattern.md  compile.md  new-spec.md  verify.md
.github/workflows/: compile.yml  verify.yml
policies/: provider.tf
policies/001-no-public-s3/: policy.md
policies/001-s3-public-access/: bad.tf  good.tf  source.md
policies/002-rds-encryption/: source.md
policies/002-rds-encryption-required/: bad.tf  good.tf  policy.md
policies/003-required-tags/: bad.tf  policy.md
policies/003-resource-tagging/: bad.tf  good.tf  source.md
rego/: 001-s3-public-access.rego  002-rds-encryption.rego  003-resource-tagging.rego
src/tpcompile/: __init__.py  cli.py  compiler.py  planner.py  validator.py
src/tpcompile/prompts/: policy_from_source.md  policy_from_spec.md
tests/: test_validator.py
